--- a/doc/thesis/discussion.tex
+++ b/doc/thesis/discussion.tex
@@ -1,4 +1,6 @@
 \chapter{Discussion}
+\label{sec:Discussion}
+\section{Review of Results}
 % Overview of results
 %% Parameters under-constrained
 %% Output estimates good
@@ -92,6 +94,7 @@ least in question.  Fewer and more realistic assumptions mean that the particle
 filter is more robust to unforeseen difficulties in FMRI data. 
 
 \chapter{Future Work}
+\label{sec:FutureWork}
 % Enhancements/Dehancements 
 %% prior
 %%% flatten prior
