--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -682,7 +682,7 @@ min &  0.82382  &0.459   &  0.04341  &0.95165 & -0.01075  & 1.15441 & -0.02677 &
 max &  0.98892  &0.5458  & 0.18339   &1.18996 & 0.06326  &  1.43196 & 0.03163  &1.33667 \\
 \hline
 \end{tabular}
-\caption{Mutual Information and the normalized $\sqrt{MSE}$, 
+\caption{Mutual Information and the normalized error, 
     for signal/noise configurations.}
 \label{tab:SingleVoxelActivationComparison} 
 \end{table}
@@ -747,7 +747,7 @@ estimated ones. Since the parameters were far from orthogonal
 \subfigure[Region labels for simulated slice.]{
 \includegraphics[height=9.5cm]{images/simregions.png} \label{fig:simslice_mask} }
 \subfigure[Grey matter map for simulate region.]{\includegraphics[height=9.5cm]{images/sim_gm}}
-\subfigure[Residual Map. Scale is Normalized $\sqrt{MSE}$. Lower (yellow) is better.]
+\subfigure[Residual Map. Scale is Normalized error. Lower (yellow) is better.]
 {\includegraphics[height=9cm]{images/sim_hm}}
 \subfigure[Mutual Information Map. Scale is bits. Higher (yellow) is better.]
 {\includegraphics[height=9cm]{images/sim_hm_mi}}
